# StringExtensions

./: .gitignore  CMakeLists.txt  README.md
Examples/01_StringEndsWith/: CMakeLists.txt  main.cpp
Examples/Tests/: main.cpp
Source/: CMakeLists.txt  StringExtensions.cpp  StringExtensions.h
